[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/PopUp.gd" type="Script" id=1]
[ext_resource path="res://UI/Font/PixelFontSmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Assets/GUI/MediumPressedButton.tres" type="Texture" id=3]
[ext_resource path="res://UI/Assets/GUI/MediumNormalButton.tres" type="Texture" id=4]
[ext_resource path="res://UI/Font/PixelFontVerySmall.tres" type="DynamicFont" id=5]

[node name="PopUp" type="ColorRect"]
margin_right = 177.0
margin_bottom = 81.0
color = Color( 0.407843, 0.407843, 0.407843, 0.568627 )
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 174.0
margin_bottom = 55.0
custom_fonts/normal_font = ExtResource( 5 )

[node name="AcceptButton" type="TextureButton" parent="."]
margin_left = 27.0
margin_top = 58.0
margin_right = 71.0
margin_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="AcceptButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -7.0
margin_right = 38.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Accept"
valign = 1

[node name="DeclineButton" type="TextureButton" parent="."]
margin_left = 103.0
margin_top = 58.0
margin_right = 152.0
margin_bottom = 76.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="DeclineButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -7.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Decline"
valign = 1

[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="DeclineButton" to="." method="_on_DeclineButton_pressed"]
